2012-11-09  Joseph Myers  <joseph@codesourcery.com>

	* aclocal.m4 (ACX_PKGVERSION): New macro.
	(ACX_BUGURL): Likewise.
	* configure.in: Use ACX_PKGVERSION and ACX_BUGURL.
	(PKGVERSION): New AC_DEFINE_UNQUOTED.
	(REPORT_BUGS_TO): Likewise.
	* configure: Regenerated.
	* config.h.in (PKGVERSION): New macro.
	(REPORT_BUGS_TO): Likewise.
	* config.make.in (PKGVERSION): New variable.
	(PKGVERSION_TEXI): Likewise.
	(REPORT_BUGS_TO): Likewise.
	(REPORT_BUGS_TEXI): Likewise.
	* Makefile (format-me): Use -I$(common-objpfx)manual.
	(INSTALL): Depend on $(common-objpfx)manual/pkgvers.texi.
	($(common-objpfx)manual/%): New target.
	(manual/%): Remove target.
	* catgets/gencat.c (more_help): Use REPORT_BUGS_TO.
	(print_version): Use PKGVERSION.
	* csu/version.c (banner): Use PKGVERSION and REPORT_BUGS_TO.
	* debug/Makefile ($(objpfx)catchsegv): Also substitute PKGVERSION
	and REPORT_BUGS_TO.
	($(objpfx)xtrace): Likewise.
	* debug/catchsegv.sh: Use PKGVERSION and REPORT_BUGS_TO.
	* debug/pcprofiledump.c (more_help): Use REPORT_BUGS_TO.
	(print_version): Use PKGVERSION.
	* debug/xtrace.sh (do_help): Use REPORT_BUGS_TO.
	(do_version): Use PKGVERSION.
	* elf/Makefile ($(objpfx)sotruss): Also substitute PKGVERSION and
	REPORT_BUGS_TO.
	(common-ldd-rewrite): Likewise.
	* elf/dl-close.c (_dl_close_worker): Use REPORT_BUGS_TO.
	* elf/ldconfig.c (more_help): Use REPORT_BUGS_TO.
	(print_version): Use PKGVERSION.
	* elf/ldd.bash.in: Use PKGVERSION and REPORT_BUGS_TO.
	* elf/pldd.c (argp_program_bug_address): Remove variable.
	(more_help): New function.
	(argp): Use more_help.
	(print_version): Use PKGVERSION.
	* elf/sln.c (main): Use PKGVERSION.
	(usage): Use REPORT_BUGS_TO.
	* elf/sotruss.ksh (do_help): Use REPORT_BUGS_TO.
	(top level): Use PKGVERSION.
	* elf/sprof.c (more_help): Use REPORT_BUGS_TO.
	(print_version): Use PKGVERSION.
	* iconv/iconv_prog.c (more_help): Use REPORT_BUGS_TO.
	(print_version): Use PKGVERSION.
	* iconv/iconvconfig.c (more_help): Use REPORT_BUGS_TO.